--- a/playtranscribe/src/pages/Login/Login.module.css
+++ b/playtranscribe/src/pages/Login/Login.module.css
@@ -11,7 +11,7 @@ body{
 }
 .container i{
   position: absolute;
-  inset: -5px;
+  inset: -20px;
   border: 2px solid #1f2b37;
   transition: .5s;
 }
@@ -79,7 +79,10 @@ body{
   font-size: medium;
   cursor: pointer;
 }
-
+.container .login .inputBox input[type="submit"]:hover {
+  transform: scale(1); 
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); 
+}
 .container .login .links {
   width: 100%;
   display: flex;
@@ -93,6 +96,12 @@ body{
   color: #1f2b37;
 }
 .container .login .links a:hover{
+  font-weight: bold;
+}
+.container  .login label span{
+  display: block;
+  margin-bottom: 5px;
+  margin-left: 5px;
   font-weight: bold;
 }
 @keyframes animar {
