--- a/playtranscribe/src/pages/Home/Home.module.css
+++ b/playtranscribe/src/pages/Home/Home.module.css
@@ -18,15 +18,10 @@
   height: 500px;
   background-color: #4de0fe;
   border-radius: 20px;
+  padding-top: 20px;
 }
 
-.uploadCard{
-  width: 60%;
-  height: 40%;
-  background-color: #f0f8ff;
-  border-radius: 20px;
-  margin-bottom: 20px;
-}
+
 
 .header p{
   margin-bottom: 20px;
@@ -75,22 +70,7 @@
   cursor: not-allowed;
 }
 
-.uploadButton {
-  background-color: #fff;
-  border: none;
-  color: #1f2b37;
-  font-weight: bold;
-  padding: 10px 20px;
-  border-radius: 10px;
-  font-size: 1rem;
-  cursor: pointer;
-  transition: background-color 0.3s, transform 0.3s;
-}
 
-.uploadButton:hover {
-  transform: scale(1.05);
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-}
 .rightColumn{
   display: flex;
   justify-content: flex-end; 
@@ -134,6 +114,65 @@
   height: auto;
   border-radius: 50%;
   
+}
+.container_logado {
+  width: 80%;
+  height: auto;
+  text-align: center;
+  background-color: #4de0fe;
+  padding: 30px;
+  display: flex;
+  flex-direction: column;
+  border-radius: 10px;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+}
+
+.h1_log {
+  color: #1f2b37;
+  font-size: 4.5rem;
+}
+
+
+.input_container {
+  margin-top: 20px;
+  width: 400px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  
+
+}
+
+.input_up {
+  padding: 10px 60px;
+  width: 300px;
+  border-radius: 5px 0 0 5px;
+  border: 2px solid #1f2b37;
+  outline: none;
+  font-size: 1rem;
+}
+
+.p_home{
+  font-size: 1.5em;
+}
+
+.terms {
+  margin-top: 15px;
+  font-size: 0.9rem;
+  color: #1f2b37;
+}
+
+.terms a {
+  color: #fff;
+  font-weight: bold;
+  text-decoration: none;
+}
+
+.terms a:hover {
+  text-decoration: underline;
 }
 
 @keyframes animar {
